tests/spec/parse/snapshots/type_alias_simple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  type UserID = int;
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "UserID",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        generics: [],
        annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 15,
                byte_length: 3,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 17,
        },
    },
]
