tests/spec/parse/snapshots/type_function.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  type Callback = fn(int, string) -> bool;
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "Callback",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 8,
        },
        generics: [],
        annotation: Function {
            params: [
                FunctionAnnotationParameter {
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 20,
                            byte_length: 3,
                        },
                    },
                    mutable: false,
                },
                FunctionAnnotationParameter {
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 25,
                            byte_length: 6,
                        },
                    },
                    mutable: false,
                },
            ],
            return_type: Constructor {
                name: "bool",
                params: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 36,
                    byte_length: 4,
                },
            },
            span: Span {
                file_id: 0,
                byte_offset: 17,
                byte_length: 23,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 39,
        },
    },
]
