tests/spec/parse/snapshots/type_generic_qualified.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  type Container = Foo.Bar<T>;
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "Container",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 9,
        },
        generics: [],
        annotation: Constructor {
            name: "Foo.Bar",
            params: [
                Constructor {
                    name: "T",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 26,
                        byte_length: 1,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 18,
                byte_length: 10,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 27,
        },
    },
]
