tests/spec/parse/snapshots/type_nested_generics.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  type Complex = Result<Option<T>, Error>;
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "Complex",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 7,
        },
        generics: [],
        annotation: Constructor {
            name: "Result",
            params: [
                Constructor {
                    name: "Option",
                    params: [
                        Constructor {
                            name: "T",
                            params: [],
                            span: Span {
                                file_id: 0,
                                byte_offset: 30,
                                byte_length: 1,
                            },
                        },
                    ],
                    span: Span {
                        file_id: 0,
                        byte_offset: 23,
                        byte_length: 9,
                    },
                },
                Constructor {
                    name: "Error",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 34,
                        byte_length: 5,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 16,
                byte_length: 24,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 39,
        },
    },
]
