tests/spec/parse/snapshots/type_qualified.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  type Data = Foo.Bar;
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "Data",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 4,
        },
        generics: [],
        annotation: Constructor {
            name: "Foo.Bar",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 13,
                byte_length: 7,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 19,
        },
    },
]
