tests/spec/parse/snapshots/type_ref.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  type IntRef = Ref<int>;
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "IntRef",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        generics: [],
        annotation: Constructor {
            name: "Ref",
            params: [
                Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 19,
                        byte_length: 3,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 15,
                byte_length: 8,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 22,
        },
    },
]
