tests/spec/parse/snapshots/type_slice.snap
---
source: tests/spec/parse/mod.rs
description: "input: \ntype IntSlice = Slice<int>;\n"
---
[
    TypeAlias {
        doc: None,
        attributes: [],
        name: "IntSlice",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 8,
        },
        generics: [],
        annotation: Constructor {
            name: "Slice",
            params: [
                Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 23,
                        byte_length: 3,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 17,
                byte_length: 10,
            },
        },
        ty: Var {
            id: uninferred,
        },
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 26,
        },
    },
]
